Bug 354903 - Plasmashell segfault when right clicking on energy management in server with UPS
Summary: Plasmashell segfault when right clicking on energy management in server with UPS
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.4.2
Platform: openSUSE Linux
: NOR crash
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: drkonqi
: 355223 355244 355251 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-11-05 15:23 UTC by Paul Konecny
Modified: 2015-11-12 18:39 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Konecny 2015-11-05 15:23:10 UTC
Application: plasmashell (5.4.2)

Qt Version: 5.5.0
Operating System: Linux 4.1.12-1-default x86_64
Distribution: "openSUSE Leap 42.1 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:
Right-clicking on the Battery icon in the system tray to see if I can edit the behaviour as the UPS is not recognized as a battery (Unknown Battery 0%). I couldn't find anything in the widget settings itself so I right clicked again to see if there were more options in the system area of the tray (Systemabschnitt der Kontrollleiste). When I tried to hover over Options for the system area of the tray I got this segfault. 
Thanks in advance!
Distribution OpenSuSE Leap 42.1 /Plasma 5.4.2

-- Backtrace:
Application: Plasma (plasmashell), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f47adc117c0 (LWP 1897))]

Thread 9 (Thread 0x7f47976fc700 (LWP 1900)):
#0  0x00007f47a717cc1d in poll () at /lib64/libc.so.6
#1  0x00007f47ac082422 in  () at /usr/lib64/libxcb.so.1
#2  0x00007f47ac08400f in xcb_wait_for_event () at /usr/lib64/libxcb.so.1
#3  0x00007f479984cc29 in  () at /usr/lib64/libQt5XcbQpa.so.5
#4  0x00007f47a787355f in  () at /usr/lib64/libQt5Core.so.5
#5  0x00007f47a69860a4 in start_thread () at /lib64/libpthread.so.0
#6  0x00007f47a718504d in clone () at /lib64/libc.so.6

Thread 8 (Thread 0x7f4794ac2700 (LWP 1932)):
#0  0x00007f47a717cc1d in poll () at /lib64/libc.so.6
#1  0x00007f47a386de64 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f47a386df7c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f47a7aa4a5b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007f47a7a4ba63 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007f47a786e84a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007f47aab3e5f8 in  () at /usr/lib64/libQt5Qml.so.5
#7  0x00007f47a787355f in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007f47a69860a4 in start_thread () at /lib64/libpthread.so.0
#9  0x00007f47a718504d in clone () at /lib64/libc.so.6

Thread 7 (Thread 0x7f4783afc700 (LWP 1943)):
#0  0x00007f47a386b1f2 in  () at /usr/lib64/libglib-2.0.so.0
#1  0x00007f47a386d44b in g_main_context_prepare () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f47a386dd80 in  () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f47a386df7c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#4  0x00007f47a7aa4a5b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007f47a7a4ba63 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#6  0x00007f47a786e84a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#7  0x00007f47aab3e5f8 in  () at /usr/lib64/libQt5Qml.so.5
#8  0x00007f47a787355f in  () at /usr/lib64/libQt5Core.so.5
#9  0x00007f47a69860a4 in start_thread () at /lib64/libpthread.so.0
#10 0x00007f47a718504d in clone () at /lib64/libc.so.6

Thread 6 (Thread 0x7f478208c700 (LWP 1946)):
#0  0x00007f47a7178ced in read () at /lib64/libc.so.6
#1  0x00007f47a38aeb60 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f47a386d999 in g_main_context_check () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f47a386ddf8 in  () at /usr/lib64/libglib-2.0.so.0
#4  0x00007f47a386df7c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#5  0x00007f47a7aa4a5b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#6  0x00007f47a7a4ba63 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#7  0x00007f47a786e84a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#8  0x00007f47aab3e5f8 in  () at /usr/lib64/libQt5Qml.so.5
#9  0x00007f47a787355f in  () at /usr/lib64/libQt5Core.so.5
#10 0x00007f47a69860a4 in start_thread () at /lib64/libpthread.so.0
#11 0x00007f47a718504d in clone () at /lib64/libc.so.6

Thread 5 (Thread 0x7f477bfff700 (LWP 1961)):
#0  0x00007f47a698a05f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f47ad2e67eb in  () at /usr/lib64/libQt5Script.so.5
#2  0x00007f47ad2e6819 in  () at /usr/lib64/libQt5Script.so.5
#3  0x00007f47a69860a4 in start_thread () at /lib64/libpthread.so.0
#4  0x00007f47a718504d in clone () at /lib64/libc.so.6

Thread 4 (Thread 0x7f47799a9700 (LWP 1962)):
#0  0x00007f47a717cc1d in poll () at /lib64/libc.so.6
#1  0x00007f47a386de64 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f47a386df7c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f47a7aa4a5b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007f47a7a4ba63 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007f47a786e84a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007f47ab6caf82 in  () at /usr/lib64/libQt5Quick.so.5
#7  0x00007f47a787355f in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007f47a69860a4 in start_thread () at /lib64/libpthread.so.0
#9  0x00007f47a718504d in clone () at /lib64/libc.so.6

Thread 3 (Thread 0x7f46ea53e700 (LWP 1966)):
#0  0x00007f47a717cc1d in poll () at /lib64/libc.so.6
#1  0x00007f47a386de64 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f47a386df7c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f47a7aa4a5b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007f47a7a4ba63 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007f47a786e84a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007f46ebb8ab77 in KCupsConnection::run() () at /usr/lib64/libkcupslib.so
#7  0x00007f47a787355f in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007f47a69860a4 in start_thread () at /lib64/libpthread.so.0
#9  0x00007f47a718504d in clone () at /lib64/libc.so.6

Thread 2 (Thread 0x7f46e8bc4700 (LWP 1981)):
#0  0x00007f47a698a408 in pthread_cond_timedwait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f47a78744c8 in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007f47a7870716 in  () at /usr/lib64/libQt5Core.so.5
#3  0x00007f47a787355f in  () at /usr/lib64/libQt5Core.so.5
#4  0x00007f47a69860a4 in start_thread () at /lib64/libpthread.so.0
#5  0x00007f47a718504d in clone () at /lib64/libc.so.6

Thread 1 (Thread 0x7f47adc117c0 (LWP 1897)):
[KCrash Handler]
#6  0x00007f47aaacd51a in QQmlBoundSignalExpression::function() const () at /usr/lib64/libQt5Qml.so.5
#7  0x00007f47aaacd618 in QQmlBoundSignalExpression::sourceLocation() const () at /usr/lib64/libQt5Qml.so.5
#8  0x00007f47aaaae45b in QQmlData::destroyed(QObject*) () at /usr/lib64/libQt5Qml.so.5
#9  0x00007f47a7a85bf8 in QObject::~QObject() () at /usr/lib64/libQt5Core.so.5
#10 0x00007f47ab75d57f in QQuickItem::~QQuickItem() () at /usr/lib64/libQt5Quick.so.5
#11 0x00007f47ab778d46 in  () at /usr/lib64/libQt5Quick.so.5
#12 0x00007f47a7a7c31c in QObjectPrivate::deleteChildren() () at /usr/lib64/libQt5Core.so.5
#13 0x00007f47a7a85f6c in QObject::~QObject() () at /usr/lib64/libQt5Core.so.5
#14 0x00007f47ab75d57f in QQuickItem::~QQuickItem() () at /usr/lib64/libQt5Quick.so.5
#15 0x00007f47ab778256 in  () at /usr/lib64/libQt5Quick.so.5
#16 0x00007f47a7a7c31c in QObjectPrivate::deleteChildren() () at /usr/lib64/libQt5Core.so.5
#17 0x00007f47a7a85f6c in QObject::~QObject() () at /usr/lib64/libQt5Core.so.5
#18 0x00007f47ab75d57f in QQuickItem::~QQuickItem() () at /usr/lib64/libQt5Quick.so.5
#19 0x00007f47ab778dc6 in  () at /usr/lib64/libQt5Quick.so.5
#20 0x00007f47a7a7c31c in QObjectPrivate::deleteChildren() () at /usr/lib64/libQt5Core.so.5
#21 0x00007f47a7a85f6c in QObject::~QObject() () at /usr/lib64/libQt5Core.so.5
#22 0x00007f47ab75d57f in QQuickItem::~QQuickItem() () at /usr/lib64/libQt5Quick.so.5
#23 0x00007f478f1bd196 in  () at /usr/lib64/qt5/qml/org/kde/plasma/core/libcorebindingsplugin.so
#24 0x00007f47a7a7c31c in QObjectPrivate::deleteChildren() () at /usr/lib64/libQt5Core.so.5
#25 0x00007f47a7a85f6c in QObject::~QObject() () at /usr/lib64/libQt5Core.so.5
#26 0x00007f47ab75d57f in QQuickItem::~QQuickItem() () at /usr/lib64/libQt5Quick.so.5
#27 0x00007f477a58cf56 in  () at /usr/lib64/qt5/qml/org/kde/kquickcontrolsaddons/libkquickcontrolsaddonsplugin.so
#28 0x00007f47a7a7e7e8 in QObject::event(QEvent*) () at /usr/lib64/libQt5Core.so.5
#29 0x00007f47ab75a4ab in QQuickItem::event(QEvent*) () at /usr/lib64/libQt5Quick.so.5
#30 0x00007f47a8dc6e8c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#31 0x00007f47a8dcbcd8 in QApplication::notify(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#32 0x00007f47a7a4dba5 in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib64/libQt5Core.so.5
#33 0x00007f47a7a4fd67 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib64/libQt5Core.so.5
#34 0x00007f47a7aa55c3 in  () at /usr/lib64/libQt5Core.so.5
#35 0x00007f47a386dc84 in g_main_context_dispatch () at /usr/lib64/libglib-2.0.so.0
#36 0x00007f47a386ded8 in  () at /usr/lib64/libglib-2.0.so.0
#37 0x00007f47a386df7c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#38 0x00007f47a7aa4a3c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#39 0x00007f47a7a4ba63 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#40 0x00007f47a8f3c620 in QMenu::exec(QPoint const&, QAction*) () at /usr/lib64/libQt5Widgets.so.5
#41 0x00007f46edc689c9 in  () at /usr/lib64/qt5/qml/org/kde/private/systemtray/libsystemtrayplugin.so
#42 0x00007f46edc6fd59 in  () at /usr/lib64/qt5/qml/org/kde/private/systemtray/libsystemtrayplugin.so
#43 0x00007f46edc71a7b in  () at /usr/lib64/qt5/qml/org/kde/private/systemtray/libsystemtrayplugin.so
#44 0x00007f47aaafe749 in  () at /usr/lib64/libQt5Qml.so.5
#45 0x00007f47aaa81a7c in  () at /usr/lib64/libQt5Qml.so.5
#46 0x00007f47aaa82b12 in  () at /usr/lib64/libQt5Qml.so.5
#47 0x00007f47aaa8353f in QV4::QObjectMethod::callInternal(QV4::CallData*) () at /usr/lib64/libQt5Qml.so.5
#48 0x00007f47aaa97e35 in QV4::Runtime::callProperty(QV4::ExecutionEngine*, int, QV4::CallData*) () at /usr/lib64/libQt5Qml.so.5
#49 0x00007f46ed4c0666 in  ()
#50 0x00007ffd4d8394f0 in  ()
#51 0x488798ae046b30d0 in  ()
#52 0x000000000475bc01 in  ()
#53 0x0000000000000000 in  ()

Possible duplicates by query: bug 352178, bug 351090, bug 350864, bug 350176, bug 349404.

Reported using DrKonqi
Comment 1 David Edmundson 2015-11-05 19:19:35 UTC
#40 0x00007f47a8f3c620 in QMenu::exec(QPoint const&, QAction*) () at /usr/lib64/libQt5Widgets.so.5
#41 0x00007f46edc689c9 in () at /usr/lib64/qt5/qml/org/kde/private/systemtray/libsystemtrayplugin.so


*sigh*

will fix
Comment 2 David Edmundson 2015-11-12 10:07:27 UTC
*** Bug 355223 has been marked as a duplicate of this bug. ***
Comment 3 David Edmundson 2015-11-12 15:35:45 UTC
Git commit 4ea74276f1a58697c6441ca2cc3b14c09c7e7fdb by David Edmundson.
Committed on 12/11/2015 at 15:33.
Pushed by davidedmundson into branch 'master'.

avoid QMenu::exec in plasmoid context menu
REVIEW: 126042

M  +12   -9    applets/systemtray/plugin/protocols/plasmoid/plasmoidtask.cpp

http://commits.kde.org/plasma-workspace/4ea74276f1a58697c6441ca2cc3b14c09c7e7fdb
Comment 4 David Edmundson 2015-11-12 16:28:08 UTC
*** Bug 355244 has been marked as a duplicate of this bug. ***
Comment 5 Martin Klapetek 2015-11-12 18:39:07 UTC
*** Bug 355251 has been marked as a duplicate of this bug. ***