avoid QMenu::exec in plasmoid context menu

BUG: 354903
REVIEW: 126042